src/App.css
/* Importing Fonts */
@import url('https://fonts.googleapis.com/css2?family=Playwrite+NG+Modern:wght@100..400&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');

* {
  outline: none;
  font-family: 'Playwrite NG Modern', Courier, monospace;
}

/* User Input Bar */
html,
body {
  height: 100%;
  min-height: 100%;
}

body {
  margin: 0;
  background-color: rgba(245, 212, 183, 0.955)
}

.data-container {
  display: flex;
  flex-direction: column;
}

.tb {
  display: table;
  width: 100%;
}

.td {
  display: table-cell;
  vertical-align: middle;
}

input,
button {
  color: #fff;
  font-family: Nunito;
  padding: 0;
  margin: 0;
  border: 0;
  background-color: transparent;
}

.user-input-cover {
  margin-top: 5%;
  padding: 2%;
  background-color: #ff7575;
  border-radius: 20px;
  box-shadow: 0 10px 40px #B5CFFF, 0 0 0 20px #ffffffeb;
  transform: scale(0.6);
  animation: fade-up 1.5s;
}

form {
  position: relative;
}

input[type="text"]:focus::placeholder {
  color: transparent;
}

input[type="text"] {
  width: 100%;
  height: 96px;
  font-size: 300%;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  line-height: 1;
}

input[type="text"]::placeholder {
  color: rgb(225, 215, 215);
  font-size: smaller;
  font-family: 'Playwrite NG Modern';
}

#s-cover {
  width: 5px;
  padding-left: 35px;
}

button {
  position: relative;
  display: block;
  width: 80px;
  height: 96px;
  cursor: pointer;
}

.s-circle {
  position: relative;
  top: -8px;
  left: 0;
  width: 43px;
  height: 43px;
  margin-top: 0;
  border-width: 15px;
  border: 15px solid #fff;
  background-color: transparent;
  border-radius: 50%;
  transition: 0.5s ease all;
}

button span {
  position: absolute;
  top: 68px;
  left: 43px;
  display: block;
  width: 45px;
  height: 15px;
  background-color: transparent;
  border-radius: 10px;
  transform: rotateZ(52deg);
  transition: 0.5s ease all;
}

button span:before,
button span:after {
  content: "";
  position: absolute;
  bottom: 0;
  right: 0;
  width: 45px;
  height: 15px;
  background-color: #fff;
  border-radius: 10px;
  transform: rotateZ(0);
  transition: 0.5s ease all;
}

#s-cover:hover .s-circle {
  top: -1px;
  width: 67px;
  height: 15px;
  border-width: 0;
  background-color: #fff;
  border-radius: 20px;
}

#s-cover:hover span {
  top: 50%;
  left: 56px;
  width: 25px;
  margin-top: -9px;
  transform: rotateZ(0);
}

#s-cover:hover button span:before {
  bottom: 11px;
  transform: rotateZ(52deg);
}

#s-cover:hover button span:after {
  bottom: -11px;
  transform: rotateZ(-52deg);
}
#s-cover:hover button span:before,
#s-cover:hover button span:after {
  right: -6px;
  width: 40px;
  background-color: #fff;
}

/* Keyframes Animation Fade */
@keyframes fade-up {
  0% {
    opacity: 0;
    transform: translateY(50px) scale(0.7);
  }

  100% {
    opacity: 1;
    transform: translateY(0px) scale(0.6);
  }
}

@keyframes fade-down {
  0% {
    opacity: 0;
    transform: translateY(-50px) scale(0.9);
  }

  100% {
    opacity: 1;
    transform: translateY(0px) scale(1);
  }
}

/* Intro Title */
.intro-title {
  margin-top: 2.5%;
  font-family: 'Playwrite NG Modern', sans-serif;
  font-weight: 900;
  text-align: center;
  /* padding-top: 4%; */
  font-size: 300%;
  color: #ff7575;
  animation: fade-down 1.5s;
}

/* Output/Response Box */
.response-cover {
  display: flex;
  align-items: center;
  padding: 1% 2%;
  background-color: #B5CFFF;
  border-radius: 20px;
  box-shadow: 0 10px 40px #B5CFFF, 0 0 0 20px #ffffffeb;
  animation: fade-up 1.5s;
  transform: scale(0.6);
  font-size: 150%;
  margin-top: -1.5%;
}

.response-cover p {
  font-family: "Ubuntu";
  font-size: 125%;
  text-align: center;
}

/* Media compatibility */

@media screen and (max-width: 1075px) {
  .response-cover {
    margin-top: -5%;
  }
}

@media screen and (max-width: 908px) {
  input[type="text"] {
    font-size: 250%;
  }
}

@media screen and (max-width: 817px) {
  .response-cover p {
    font-size: 100%;
  }
}

@media screen and (max-width: 530px) {
  .intro-title {
    font-size: 250%;
  }
  .response-cover {
    margin-top: -15%;
  }
}

@media screen and (max-width: 440px) {
  .intro-title {
    font-size: 200%;
  }
  input[type="text"] {
    font-size: 200%;
  }
  .response-cover {
    margin-top: -20%;
  }
}

@media screen and (max-width: 425px) {
  .intro-title {
    font-size: 150%;
  }

  .response-cover {
    margin-top: -25%;
  }

  input[type="text"] {
    font-size: 150%;
  }

  .response-cover p {
    font-size: 100%;
  }
}

@media screen and (max-width: 375px) {
  .response-cover p {
    font-size: 85%;
  }
}

@media screen and (max-width: 320px) {
  .intro-title {
    font-size: 105%;
  }

  .response-cover {
    margin-top: -35%;
  }
}

